# janus-proto

./: README.md
core/: Cargo.toml
core/src/: editor.rs  lib.rs  main.rs  rpc.rs
ui/: .prettierrc  Procfile  package.json  vue.config.js  webpack.config.js
ui/public/: index.html  index.js
ui/src/: App.vue  electron.js  index.js  main.js  store.js
ui/src/components/: Column.vue  Columns.vue  Editor.vue  File.vue  Header.vue  Menu.vue  Pane.vue  Tile.vue
ui/src/components/Pane/: Pane.js
ui/src/modules/renderer/: editor.js  ipc.js
