[package]
name = "core"
version = "0.1.0"
authors = ["Ryan Faulhaber <faulhaberryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ropey = "1.1.0"
serde = {version = "1.0.103", features = ["derive"]}
serde_json = "1.0.42"